# Voxel-Compression

./: README.md
ssvodag/: JaspeVillanueva2017SSVDAG.bib  readme.md
ssvodag/JaspeVillanueva2017SSVDAG-symvox-0.1/symvox-0.1/: CMakeLists.txt  readme.txt
ssvodag/JaspeVillanueva2017SSVDAG-symvox-0.1/symvox-0.1/cmake_modules/: FindGLEW.cmake  FindGLFW.cmake
ssvodag/JaspeVillanueva2017SSVDAG-symvox-0.1/symvox-0.1/shaders/: octree_dda.frag.glsl
ssvodag/JaspeVillanueva2017SSVDAG-symvox-0.1/symvox-0.1/src/svbuilder/: main.cpp
ssvodag/JaspeVillanueva2017SSVDAG-symvox-0.1/symvox-0.1/src/svviewer/: camera.cpp  camera.hpp  glslprogram.cpp  glslprogram.hpp  halton.cpp  halton.hpp  main.cpp  octree_dda_renderer.cpp  octree_dda_renderer.hpp  renderer.hpp  renderer_monitor.cpp  screenquadrenderer.cpp  screenquadrenderer.hpp
ssvodag/JaspeVillanueva2017SSVDAG-symvox-0.1/symvox-0.1/src/symvox/: encoded_octree.hpp  encoded_ssvdag.cpp  encoded_ssvdag.hpp  encoded_svdag.cpp  encoded_svdag.hpp  encoded_svo.cpp  encoded_svo.hpp  encoded_ussvdag.cpp  encoded_ussvdag.hpp  geom_octree.cpp  geom_octree.hpp  octree.cpp  octree.hpp  octree_node.cpp  scene.cpp  scene.hpp  test_triangle_box.cpp  test_triangle_box.hpp  util.hpp
ssvodag/sl-7.8.2-Source/: AUTHORS  BUGS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  NEWS  README  THANKS  TODO  cmake_clean.sh  copyright.txt  slconvert.pl
ssvodag/sl-7.8.2-Source/benchmark/: CMakeLists.txt  bench_compression.cpp  bench_containers.cpp  bench_external_array.cpp  bench_geometry.cpp  bench_hull.cpp  bench_knn.cpp  bench_minla.cpp  bench_obox.cpp  dense_daxpy.cpp  fixed_size_daxpy.cpp
ssvodag/sl-7.8.2-Source/cmake_modules/: CMakeLists.txt  FindSL.cmake
ssvodag/sl-7.8.2-Source/doc/: CMakeLists.txt  Doxyfile.in  html_footer.html  html_header.html  sl.dox
ssvodag/sl-7.8.2-Source/src/: CMakeLists.txt
ssvodag/sl-7.8.2-Source/src/sl/: CMakeLists.txt  adaptive_packed_memory_array.hpp  affine_map.hpp  any.hpp  any_extractor.hpp  arena_allocator.hpp  argument_parser.cpp  argument_parser.hpp  arithmetic_codec.cpp  arithmetic_codec.hpp  array_codec.hpp  assert.cpp  assert.hpp  axis_aligned_box.hpp  ball.hpp  benchmarker.cpp  benchmarker.hpp  bitops.hpp  bounded_scalar.hpp  bounding_volume.hpp  buffer_serializer.hpp  cartesian_frame.hpp  cast.hpp  cell_octree.hpp  cell_vertex_octree.hpp  cie.hpp  circular_buffer.hpp  clock.cpp  clock.hpp  compact_bitio.hpp  config.hpp  connectivity.hpp  conv_to.hpp  convex_hull.hpp  cstdint.cpp  cstdint.hpp  cubature_rule.hpp  dense_array.hpp  embedded_zerotree_codec.hpp  encdec.hpp  (+140 more)
ssvodag/sl-7.8.2-Source/src/sl/GL/: gl.cpp  gl.hpp
ssvodag/sl-7.8.2-Source/src/sl/config/: config.h  config.h.in
ssvodag/sl-7.8.2-Source/testsuite/: CMakeLists.txt  test_absolute_orientation.cpp  test_argument_parser.cpp  test_bitops.cpp  test_bounded_scalar.cpp  test_color.cpp  test_compression.cpp  test_containers.cpp  test_cubature.cpp  test_external_array.cpp  test_fem.cpp  test_fixed_unit_real.cpp  test_floating_cone.cpp  test_geometry.cpp  test_graph_minimum_linear_arranger.cpp  test_indexed.cpp  test_interval.cpp  test_knn.cpp  test_matrix.cpp  test_miniball.cpp  test_normal_compressor.cpp  test_random.cpp  test_serializer.cpp  test_smart_pointer.cpp  test_tester.cpp  test_texpr.cpp  test_threads.cpp  test_time.cpp  test_triangle_mesh.cpp
